-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 10.0.1
-
None
-
-
229705622 (dev), e3572bc94 (6.5)
The code snippet present at https://doc.qt.io/qt-6/qpainter.html#drawPixmap is missing the identifier for object of type QPainter.
For Gerrit Dashboard: QTCREATORBUG-29216 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
480361,3 | QPainter: Fix missing variable in drawPixmap snippet | dev | qt/qtbase | Status: MERGED | +2 | 0 |
480492,2 | QPainter: Fix missing variable in drawPixmap snippet | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |