QPainter: Fix missing variable in drawPixmap snippet

Fixes: QTCREATORBUG-29216
Change-Id: If055e7b4d6ba7734bc29da29db68b3224fc734c1
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 229705622167bc5982c4c243014bf86b37f3c38c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>